# SpotNLP

./: .gitignore  README.md  commands.txt  env.yml  environment.yml  seq.txt  setup.sh
devel/: .catkin  .rosinstall
devel/include/mp_pose/: depth_image.h  landmark.h  people.h  person.h  pose.h  pose_image.h
devel/lib/pkgconfig/: camera.pc  mp_pose.pc  xmem.pc
src/: CMakeLists.txt
src/audio/: package.xml  visualize_text.py
src/dataset/: CMakeLists.txt  package.xml  setup.py
src/dataset/data/: README.md
src/dataset/dataset_raw/: README.md
src/dataset/src/dataset/: dataset.py  write_dataset.py
src/gesture/: CMakeLists.txt  package.xml  setup.py
src/gesture/buffer/: people_buffer.py  pose_buffer.py
src/gesture/record/: record_data.py
src/gesture/replay/: replay_data.py
src/gesture/src/: test.py
src/llm/: CMakeLists.txt  package.xml
src/llm/logs/: README.md
src/llm/prompts/: actions.json  outputs.json  outputs_short.json  prompt.txt  system_input.json  system_waypoints.json  user_input.json
src/model/: CMakeLists.txt  package.xml  setup.py
src/model/src/: NN_modalpha.pth
src/movement_core/: CMakeLists.txt  package.xml
src/movement_core/src/: .gitignore
src/mp_pose/: CMakeLists.txt  package.xml
src/mp_pose/msg/: buffer.msg  depth_image.msg  landmark.msg  people.msg  person.msg  pose.msg
src/mp_pose/pose/: mediapipe_pose.py
src/spot_hri/: CMakeLists.txt  package.xml
src/spot_hri/src/: launch.py
src/spot_hri/state_core/: package.xml  (+1 more)
src/tts/: CMakeLists.txt  package.xml
src/visualize/: package.xml
src/xmem/: CMakeLists.txt
(+76 files in other folders)
